samples/_failures_safe/1761320436_cd2728_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0d2ca11.c: In function ‘lexer_get_next_token’:
./samples/SAFE/__tmp_e0d2ca11.c:153:9: error: expected declaration or statement at end of input
  153 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_e0d2ca11.c:153:9: error: expected declaration or statement at end of input
